# pulsarchunter

./: .gitignore  config.h.in  configure.ac  configure.in
autoconf/: check_zlib.m4  fftw.m4  fftwf.m4  psrxml.m4
src/: Makefile.am
src/barycentre-sla/: Makefile.am  cbarycentre.c  cbarycentre.h  f772c.h  f77trig.c  f77trig.c.01.sibling  f77trig.c.22.lreg  psrephb.f  tel.def
src/pch-dmcomp/: Makefile.am  pch-dmcomp.C  pch-dmcomp.h  pch-fourier-size.C  pch-ndm-calc.C
src/pch-seek/: Makefile.am  gtools.C  gtools.h  make_harmfold_code.py  make_options_code.py  options.file  pch-fourier-size.C  pch-seek-do-search.C  pch-seek-fourier.C  pch-seek-harmfold-powtwo.C  pch-seek-harmfold.C  pch-seek-init.C  pch-seek-normalise.C  pch-seek-output.C  pch-seek-phase-fit.C  pch-seek-read-file.C  pch-seek-recon.C  pch-seek-search-spec.C  pch-seek-singlepulse.C  pch-seek-test.C  pch-seek-zap.C  pch-seek.C  pch-seek.h  toolkit.C  toolkit.h
src/pch-tune/: Makefile.am  pch-tune-functions.C  pch-tune.C  pch-tune.h
src/soda/: pch-make-soda  soda.c
