noinst_LTLIBRARIES=libslabary.la
libslabary_la_SOURCES=dat.f     dcc2s.f   dcs2c.f   deuler.f  dranrm.f  dtt.f     dvdv.f    epb2d.f   epj.f     evp.f     fk45z.f   geoc.f    gmst.f    prec.f    psrephb.f pvobs.f cbarycentre.h cbarycentre.c f77trig.c f772c.h
EXTRA_DIST=f77trig.c.01.sibling f77trig.c.22.lreg tel.def


